[package]
name = "escrow_contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
wallet_contract = {path = "../wallet_contract"}

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
